# infinite-glyphs

./: .ghtraf.json  .repokit.json  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  conftest.py  pyproject.toml  requirements.txt
.github/: release-template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: release.yml
docs/stats/: README.md  index.html
infinite_glyphs/: __init__.py  __main__.py  _version.py  cli.py
infinite_glyphs/font/: __init__.py  bake.py
infinite_glyphs/glyphgen/: __init__.py  alphabet.py  automata.py  datamatrix.py  engine.py  geometry.py  metrics.py  outline.py  provider.py
infinite_glyphs/render/: __init__.py  png.py  svg.py
tests/: conftest.py  test_glyphs.py  test_version.py
tests/one-offs/: bake_and_verify.py  render_number_demo.py  render_script_sheet.py
