[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infinite-glyphs"
dynamic = ["version"]
description = "Procedural glyphs for arbitrarily large numeral bases: deterministic cursive (plus data-matrix and cellular-automata) scripts rendered to SVG/PNG and baked into installable fonts."
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [
    {name = "djdarcy", email = "djdarcy@users.noreply.github.com"},
]
keywords = ["fonts", "typography", "glyphs", "fonttools", "procedural-generation", "numeral-systems", "cellular-automata", "svg"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Text Processing :: Fonts",
]

dependencies = [
    "Pillow>=9.0",
    "fonttools>=4.40",
]

[project.optional-dependencies]
# Recommended: clean, consistently-wound font contours (else glyphs may render thin).
font = [
    "skia-pathops>=0.7",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "skia-pathops>=0.7",
]

[project.urls]
Homepage = "https://github.com/djdarcy/infinite-glyphs"
Repository = "https://github.com/djdarcy/infinite-glyphs"
Issues = "https://github.com/djdarcy/infinite-glyphs/issues"

[project.scripts]
infinite-glyphs = "infinite_glyphs.cli:main"

[tool.setuptools.dynamic]
version = {attr = "infinite_glyphs._version.PIP_VERSION"}

[tool.setuptools.packages.find]
where = ["."]
include = ["infinite_glyphs", "infinite_glyphs.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"

[tool.repokit-common]
version-source = "infinite_glyphs/_version.py"
changelog = "CHANGELOG.md"
repo-url = "https://github.com/djdarcy/infinite-glyphs"
tag-prefix = "v"
private-patterns = ["private/", "local/", ".env"]
